feat: completed MainActivity styling

--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -17,9 +17,10 @@
 
 <resources>
     <color name="photo_placeholder">#ccc</color>
+    <color name="colorPrimaryDark">#1B5E20</color>
+    <color name="colorPrimary">#2e7d32</color>
+    <color name="colorAccent">#8bc34a</color>
+    <color name="theme_accent">#fff</color>
+    <color name="ltgray">#ccc</color>
 
-    <color name="theme_primary">#04561A</color>
-    <color name="theme_primary_dark">#04561A</color>
-    <color name="theme_accent">#04561A</color>
-    <color name="ltgray">#ffe0e0e0</color>
 </resources>
