--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="4dp"
     android:layout_marginLeft="4dp"
+    android:id="@+id/card_view"
     android:layout_marginRight="4dp"
     android:layout_marginTop="4dp"
     android:clickable="true"
@@ -19,6 +20,7 @@
         <com.example.xyzreader.ui.DynamicHeightNetworkImageView
             android:id="@+id/thumbnail"
             android:layout_width="match_parent"
+            android:transitionName="@string/transition_image_view"
             android:layout_height="match_parent"
             android:background="@color/photo_placeholder"
             android:scaleType="fitXY" />
