--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -1,13 +1,14 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="4dp"
     android:layout_marginLeft="4dp"
-    android:id="@+id/card_view"
     android:layout_marginRight="4dp"
     android:layout_marginTop="4dp"
     android:clickable="true"
+    android:elevation="@dimen/card_view_default_elevation"
     android:focusable="true"
     android:foreground="?selectableItemBackground">
 
@@ -20,10 +21,10 @@
         <com.example.xyzreader.ui.DynamicHeightNetworkImageView
             android:id="@+id/thumbnail"
             android:layout_width="match_parent"
-            android:transitionName="@string/transition_image_view"
             android:layout_height="match_parent"
             android:background="@color/photo_placeholder"
-            android:scaleType="fitXY" />
+            android:scaleType="fitXY"
+            android:transitionName="@string/transition_image_view" />
 
         <TextView
             android:id="@+id/article_title"
@@ -31,14 +32,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="end"
+            android:fontFamily="sans-serif"
             android:maxLines="2"
             android:paddingBottom="4dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:paddingTop="16dp"
-            android:textStyle="bold"
-            android:fontFamily="sans-serif"
-            android:textColor="@android:color/black" />
+            android:textColor="@android:color/black"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/article_subtitle"
