--- a/XYZReader/src/main/res/values/dimens.xml
+++ b/XYZReader/src/main/res/values/dimens.xml
@@ -8,5 +8,6 @@
     <dimen name="fab_press_translation_z">6dp</dimen>
     <dimen name="fab_margin">24dp</dimen>
     <dimen name="appbar_default_elevation">3dp</dimen>
+    <dimen name="card_view_default_elevation">3dp</dimen>
 
 </resources>
