--- a/XYZReader/src/main/res/values-sw600dp/dimens.xml
+++ b/XYZReader/src/main/res/values-sw600dp/dimens.xml
@@ -5,4 +5,6 @@
     <item name="detail_body_line_spacing_multiplier" format="float" type="fraction">1.3</item>
     <dimen name="fab_margin">24dp</dimen>
     <dimen name="appbar_default_elevation">3dp</dimen>
+    <dimen name="fab_elevation">6dp</dimen>
+    <dimen name="card_view_default_elevation">2dp</dimen>
 </resources>
