--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -19,7 +19,7 @@
     <color name="photo_placeholder">#ccc</color>
     <color name="colorPrimaryDark">#1B5E20</color>
     <color name="colorPrimary">#2e7d32</color>
-    <color name="colorAccent">#8bc34a</color>
+    <color name="colorAccent">#CDDC39</color>
     <color name="theme_accent">#fff</color>
     <color name="ltgray">#ccc</color>
 
